--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,8 @@ orbs:
   welcome: circleci/welcome-orb@0.4.1
 jobs:
   build:
+    docker:
+      - image: cimg/base:2020.01
     steps:
       - twist/notify:
           webhook: webhook
